<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.CheckForecastActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/check_forecast"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:layout_centerInParent="true"
        android:background="@color/colorLightGrey"
        android:padding="20dp">

        <AutoCompleteTextView
            android:id="@+id/locationName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/colorLightGrey"
            android:hint="@string/location"
            android:textSize="20sp" />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/addFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locationName"
            android:layout_centerHorizontal="true"
            android:background="@color/colorButton"
            android:text="@string/addFavourite" />

        <Button
            android:id="@+id/checkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addFavourite"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/show_weather_by_city" />

        <TextView
            android:layout_marginTop="12dp"
            android:layout_below="@id/checkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/or"
            android:textSize="20sp" />


        <Button
            android:layout_marginTop="50dp"
            android:id="@+id/checkButtonCoords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkButton"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/show_weather_by_coords" />
    </RelativeLayout>

</RelativeLayout>